styles/style.css
*{
  box-sizing: border-box;
}

body{
  margin: 0;
  padding: 0;
  height: 100vh;
  width: 100vw;
  background: linear-gradient( 170deg, #fff, #f0f0f0, #000);
  color: black;
  overflow: hidden;
  display: grid;
  grid: auto auto auto auto auto/ auto auto auto;
  grid-row-gap: 10px;
}

h1{
  grid-row: 1/2;
  grid-column: 1/4;
  margin: 0;
  padding: 0;
  width: 100vw;
  font-family: "EB Garamond", serif;
  font-size: 8vh;
  text-align: center;
  transition: 0.5s;
}

@media only screen and (orientation: portrait){
  h1{
    font-size: 4vh;
    transition: 0.5s;
  }
}

.buttonContainer{
  grid-row: 2/3;
  grid-column: 1/4;
  height: auto;
  width: 100%;
  display: flex;
  justify-content: space-around;
}

.button{
  font-family: "Roboto", sans-serif;
  font-size: 4vh;
  height: 6vh;
  width: 26vw;
  text-decoration: none;
  text-align: center;
  color: #fff;
  text-shadow: -1px 1px rgba(255,255,255,0.2);
  border: 2px solid #fff;
  border-radius: 20px;
  background-color: rgba(0,0,0,0.5);
  -webkit-box-shadow: inset 0 0 5px 2px rgba(0,0,0,0.2), 0 0 5px 2px rgba(0,0,0,0.5);
  -moz-box-shadow: inset 0 0 5px 2px rgba(0,0,0,0.2), 0 0 5px 2px rgba(0,0,0,0.5);
  box-shadow: inset 0 0 5px 2px rgba(0,0,0,0.2), 0 0 5px 2px rgba(0,0,0,0.5);
  transition: 0.5s;
}

.button:hover{
  background-color: rgba(0,0,0,0.2);
  text-shadow: -1px 1px rgba(0,0,0,0.8);
}

@media only screen and (orientation: portrait){
  .button{
    font-size: 2.5vh;
    width: 40vw;
    transition: 0.5s;
  }

  .formContainer{
    grid-row: 3/4;
    grid-column: 1/4;
    width: 100vw;
    padding-right: 10vw;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding-left: 10vw;
  }
}

@media only screen and (orientation: portrait) and (max-width: 1024px){
  .button{
    padding-top: 10px;
    transition: 0.5s;
  }
}


@media only screen and (orientation: landscape){
  .formContainer{
    grid-row: 3/4;
    grid-column: 2/3;
    width: 100vw;
    padding-right: 10vw;
    display: flex;
    flex-direction: row;
    padding-left: 20vw;
  }
}


@media only screen and (orientation: portrait){
  .formInput{
    width: 4vw;
  }
}

  .formInput{
    height: 5vh;
    width: 2vw;
    font-family: "Roboto", sans-serif;
    font-size: 2vh;
    padding-left: 15px;
    background: rgba(0,0,0,0.2);
    border: 2px solid #fff;
    border-radius: 20px;
    color: black;
    outline: none;
    -webkit-box-shadow: inset 0 0 5px 2px rgba(0,0,0,0.2), 0 0 5px 2px rgba(0,0,0,0.5);
    -moz-box-shadow: inset 0 0 5px 2px rgba(0,0,0,0.2), 0 0 5px 2px rgba(0,0,0,0.5);
    box-shadow: inset 0 0 5px 2px rgba(0,0,0,0.2), 0 0 5px 2px rgba(0,0,0,0.5);
    transition: 0.5s;
}

.searchBtn{
  position: relative;
  bottom: 2px;
  height: 6vh;
  width: 18vh;
  padding: 2px;
  font-family: "Roboto", sans-serif;
  font-size: 4vh;
  text-align: center;
  color: #fff;
  text-shadow: -1px 1px rgba(255,255,255,0.2);
  border: 2px solid #fff;
  border-radius: 20px;
  background-color: rgba(0,0,0,0.5);
  -webkit-box-shadow: inset 0 0 5px 2px rgba(0,0,0,0.2), 0 0 5px 2px rgba(0,0,0,0.5);
  -moz-box-shadow: inset 0 0 5px 2px rgba(0,0,0,0.2), 0 0 5px 2px rgba(0,0,0,0.5);
  box-shadow: inset 0 0 5px 2px rgba(0,0,0,0.2), 0 0 5px 2px rgba(0,0,0,0.5);
  transition: 0.5s;
}

.searchBtn:hover{
  background-color: rgba(0,0,0,0.2);
  text-shadow: -1px 1px rgba(0,0,0,0.8);
}

@media only screen and (orientation: portrait){
  .searchBtn{
    margin-top: 10px;
  }
}
@media only screen and (orientation: landscape){
  .searchBtn{
    margin-left: 10px;
  }
}

.container{
  grid-row: 4/5;
  grid-column: 1/4;
  margin-left: 5vw;
  height: 0;
  width: 0;
  outline: none;
  border-radius: 20px;
  -webkit-box-shadow: inset 0 -5px 10px rgba(0,0,0,0.5), inset 0 5px 10px rgba(0,0,0,0.5);
  -moz-box-shadow: inset 0 -5px 10px rgba(0,0,0,0.5), inset 0 5px 10px rgba(0,0,0,0.5);
  box-shadow: inset 0 -5px 10px rgba(0,0,0,0.5), inset 0 5px 10px rgba(0,0,0,0.5);
  overflow-y: scroll;
  overflow-x: hidden;
  opacity: 0;
}

.wrapper{
  height: auto;
  width: 100%;
  padding: 5px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  z-index: 1;
}

.pageLink{
  width: 88vw;
  border: 1px solid blue;
  margin-top: 10px;
  text-decoration: none;
  font-family: "EB Garamond", serif;
  padding: 10px;
  background-color: rgba(0,0,0,0.4);
  border-left: 2px solid rgba(0,0,0,0.5);
  border-bottom: 2px solid rgba(0,0,0,0.5);
  border-right: 2px solid rgba(255,255,255,0.5);
  border-top: 2px solid rgba(255,255,255,0.5);
  border-radius: 20px;
  color: white;
  -webkit-box-shadow: 0 -2px 10px rgba(0,0,0,0.5), 0 2px 10px 1px rgba(0,0,0,0.5);
  -moz-box-shadow: 0 -2px 10px rgba(0,0,0,0.5), 0 2px 10px 1px rgba(0,0,0,0.5);
  box-shadow: 0 -2px 10px rgba(0,0,0,0.5), 0 2px 10px 1px rgba(0,0,0,0.5);
  transition: 0.5s;
}

.page:hover{
  background-color: rgba(255,255,255,0.2);
}

.page{
  display: flex;
  flex-direction: row;
  background-repeat: no-repeat;
  background-size: 50px;
  transition: 0.5s;
  border-radius: 20px;
}

@media only screen and (orientation: portrait){
  .page{
      padding-right: 20px;
      transition: 0.5s;
  }

}

@media only screen and (orientation: landscape) and (min-height: 500px) {
  .picImage{
    width: 10vw;
    height: 10vw;
    background-repeat: no-repeat;
    background-size: contain;
  }
}

@media only screen and (orientation: landscape) and (min-height: 400px) and (max-height: 499px){
  .picImage{
    width: 20vw;
    height: 20vw;
    background-repeat: no-repeat;
    background-size: contain;
  }
}

@media only screen and (orientation: landscape) and (max-height: 399px){
  .picImage{
    width: 30vw;
    height: 30vw;
    background-repeat: no-repeat;
    background-size: contain;
  }
}

@media only screen and (orientation: portrait) and (max-height: 812px){
  .picImage{
    width: 150vw;
    height: 50vw;
    background-repeat: no-repeat;
    background-size: contain;
  }
}

@media only screen and (orientation: portrait) and (min-height: 813px){
  .picImage{
    width: 50vw;
    height: 50vw;
    background-repeat: no-repeat;
    background-size: contain;
  }
}

.content{
  margin: 0;
  padding-top: 0;
  padding-bottom: 0;
  list-style-type: none;
  background: transparent;
}

.content2{
  position: relative;
  left: 20px;
  width: 85%;
  margin: 0;
  padding-top: 0;
  padding-bottom: 0;
  list-style-type: none;
  background: transparent;
}

h3{
  font-size: 3vw;
}

.summary{
  padding-right: 10px;
  font-size: 2.5vw;
}

.disambiguation{
  font-weight: bold;
  font-size: 30px;
}

@media only screen and (orientation: portrait){
  #signature{
    grid-row: 5/6;
    grid-column: 1/4;
    width: auto;
    height: auto;
    margin: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    z-index: 2;
    transition: 0.5s;
  }
}

@media only screen and (orientation: landscape){
  #signature{
    grid-row: 5/6;
    grid-column: 2/3;
    width: auto;
    height: auto;
    margin: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    z-index: 2;
    transition: 0.5s;
  }
}


.portfolioLink{
  width: auto;
  height: auto;
  display: flex;
  color: white;
  font-family: "EB Garamond", serif;
  text-decoration: none;
}

.portfolioLink:hover{
  -webkit-text-stroke: 3px rgba(255,255,255,0.5);
}

.portfolioLink:hover~.heroLogo{
  -webkit-text-stroke: 3px rgba(255,255,255,0.5);
}

.heroLogo{
  position: relative;
  font-size: 60px;
  -webkit-text-stroke: 2px rgba(255,255,255,0.2);

}

.heroLogo:hover~.sig{
  -webkit-text-stroke: 3px rgba(255,255,255,0.5);
}

